--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"/>
       <link rel="stylesheet" href="./css/styles.css">
-    <title>Document</title>
+    <title>workoholics - CARLOS COGLIANDRO</title>
+    <link rel="shortcut icon" href="./images/logo.png">
   </head>
 
   <body>
